--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2022 Anh Tester
+# Copyright (c) 2022 Robin
 # Automation Framework Selenium
 #
 # Config system
@@ -45,7 +45,7 @@ OVERRIDE_REPORTS=no
 #open_reports_after_execution--> yes or no
 open_reports_after_execution=yes
 #send_email_to_users --> yes or no
-#If yes -> then, provide your mail credentials -> src/main/java -> package anhtester.com.mail.EmailConfig;
+#If yes -> then, provide your mail credentials -> src/main/java -> package anhRobin.com.mail.EmailConfig;
 # This Email will be sent using Java mail API
 send_email_to_users=no
 # PassedStepsScreenshot --> yes or no
